# rust-api

./: .env  Cargo.toml  cargo_err.txt  token.txt  x.html
logs/: app.log.2026-06-15  app.log.2026-06-17
src/: main.rs
src/database/: mod.rs
src/handlers/: auth.rs  category.rs  mod.rs  order.rs  payment.rs  product.rs  review.rs  user.rs
src/middlewares/: user.rs
src/models/: category.rs  mod.rs  order.rs  order_item.rs  payment.rs  product.rs  review.rs  user.rs
src/repository/: category.rs  mod.rs  order.rs  order_item.rs  payment.rs  product.rs  review.rs  user.rs
src/routes/: auth.rs  category.rs  mod.rs  order.rs  payment.rs  product.rs  products.rs  review.rs  user.rs
src/services/: logger.rs
src/tests/: category.rs  mod.rs
src/types/: mod.rs
src/utils/: cors.rs  hash.rs  logger.rs  mod.rs  token.rs
