[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.9"
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
mysql = "28.0.0"
serde = "1.0.228"
sqlx = { version = "0.9.0", default-features = false, features = ["mysql", "runtime-tokio", "tls-rustls", "macros", "chrono"] }
tokio = "1.52.3"
