[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["password-hash", "std"] }
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "10.4.0"
mysql = "28.0.0"
rust_decimal = { version = "1.42.1", features = ["serde-float"] }
serde = "1.0.228"
sqlx = { version = "0.9.0", default-features = false, features = ["mysql", "runtime-tokio", "tls-rustls", "macros", "chrono", "rust_decimal"] }
tokio = "1.52.3"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23" , features = ["env-filter", "json"] }
